Add numpy to trulens-explain dependencies and bump python>=3.8 (#267)
* add np

* Update setup.py

* display yapf version

* print yapf version

* fix fmt signature

* fmt explain

* Use PIL.Image.LANCZOS

--- a/.azure_pipelines/ci.yaml
+++ b/.azure_pipelines/ci.yaml
@@ -92,6 +92,7 @@ jobs:
       - bash: |
           set -e
           source activate $(condaEnvFileSuffix)
+          echo Using yapf $(yapf --version)
           ./format.sh
         displayName: Format Code
       - bash: |
