CI/CD Formatting FIx (#273)
* add isort to pipeline

* fmt eval

* fmt explain

* yapf complaining about signature

--- a/.azure_pipelines/ci-eval-pr.yaml
+++ b/.azure_pipelines/ci-eval-pr.yaml
@@ -39,6 +39,7 @@ jobs:
           set -e
           source activate $(condaEnvFileSuffix)
           pip install yapf==0.32.0
+          pip install isort==5.10.1
           ./format.sh
         displayName: Format Code
       - bash: |
