--- a/.azure_pipelines/ci-eval.yaml
+++ b/.azure_pipelines/ci-eval.yaml
@@ -52,6 +52,7 @@ jobs:
           pip install -e .
           pip install -r $(requirementsFile)
           pip install yapf==0.32.0
+          pip install isort==5.10.1
           pip install ipykernel
           python -m ipykernel install --user --name $(condaEnvFileSuffix) --display-name $(condaEnvFileSuffix)
         displayName: Install pip package
