redact keys from dashboard (#293)
* first

* typo

* nit to import hierarchy

* typo

* more coverage

* merge fix

* dont exclude endpoints

* remove old notes

* fixes for backwards compatibility

--- a/trulens_eval/Makefile
+++ b/trulens_eval/Makefile
@@ -3,7 +3,7 @@ CONDA_ENV := py38_trulens
 CONDA := source $$(conda info --base)/etc/profile.d/conda.sh ; conda activate ; conda activate $(CONDA_ENV)
 
 trubot:
-	$(CONDA); (PYTHONPATH=. python -u trulens_eval/examples/trubot.py)
+	$(CONDA); (PYTHONPATH=. python -u examples/trubot/trubot.py)
 
 test:
 	$(CONDA); python -m unittest discover tests.unit
