--- a/trulens_eval/trulens_eval/react_components/record_viewer/package.json
+++ b/trulens_eval/trulens_eval/react_components/record_viewer/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.7",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "streamlit-component-lib": "^1.3.0"
