--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,6 +67,7 @@ nav:
       - Feedback Functions: trulens_eval/feedback_functions.ipynb
       - API Reference:
           - Tru: trulens_eval/api/tru.md
+          - TruBasicApp: trulens_eval/api/trubasicapp.md
           - TruChain: trulens_eval/api/truchain.md
           - TruLlama: trulens_eval/api/trullama.md
           - Feedback Functions: trulens_eval/api/feedback.md
