async acall for langchain (#312)
* working

* async prototype

* revert uneeded

* comments

* add thunk alias

* add note to async test

* threading issue

* try again

* remove nested asyncio for now

* initial commit

* more tests

* more test

* fixing cost tracking issues

* working tests only

* more fixes

* process streaming results

* check token genned response

* notes

* refine tests

* docs

* typo

* add example notebook

* more into async example notebook

* adjust async example notebook

---------

Co-authored-by: Ricardo Shih <rick@ailens.io>

--- a/trulens_eval/Makefile
+++ b/trulens_eval/Makefile
@@ -8,6 +8,9 @@ trubot:
 test:
 	$(CONDA); python -m unittest discover tests.unit
 
+test-tru-chain:
+	$(CONDA); python -m unittest tests.unit.test_tru_chain
+
 format:
 	$(CONDA); bash format.sh
 
