--- a/.azure_pipelines/ci-eval.yaml
+++ b/.azure_pipelines/ci-eval.yaml
@@ -80,7 +80,8 @@ jobs:
         displayName: Run combine docs for testing
       - bash: |
           source activate $(condaEnvFileSuffix)
-          pip install pytest==7.0.1 pytest-azurepipelines langchain>=0.0.170 llama_index>=0.7.0 
+          pip install pytest==7.0.1 pytest-azurepipelines langchain>=0.0.230 llama_index>=0.7.16
+          pip install html2text==2020.1.16
           pip install docarray hnswlib
           echo '::group::piplist'
           echo "$(pip list)"
