[Feat] External database with SQLAlchemy (#359)
* setup db_v2 with almebic and sqlalchemy

* warn for in-memory sqlite. add type hints

* add it test db_v2_migration

* add docker setup for db_v2 it test. adjust test calls

* fix docker compose. change to safe migration strategy for legacy sqlite. adjust schema. add copy_database. adjust docs

* remove redundant assertions

* fix instructions for new revision

* reorganize db_v2 utils

* impl feedback defs db model

* implement fb result and record. reload sqlalchemy after sqlite migration

* reload on every migration

* make check for legacy file more robust. test db consistency. reorg tests. use clean db context in tests

* impl get records and feedbacks

* pass url as str to streamlit. pass engine to alembic

* fix get_records_and_feedbacks for empty results. use all float ts in db, iso format in df, fix ts in legacy migration

* add missing abc methods to DB interface

* add missing cols to get_records_and_feedback

* impl get_feedback

* fix signature of get_feedback. fix filter by status list

* impl get feedback defs

* fix empty app filter, add missing `type` field

* fix feedback calls

* rename db_v2 to database

* fix concat of cost columns

* fix indexing issue when loading records

* fix aggregation of feedback results

* support 0.9.0 field

* fix aggregate feedback results and calls

* simplify fb result parsing into df

* refactor db relationships

* make check for legacy sqlite more conservative

* fix parsing of perf_json

* fix clean_db in tests

---------

Co-authored-by: rshih32 <rick@ailens.io>

--- a/trulens_eval/Makefile
+++ b/trulens_eval/Makefile
@@ -8,6 +8,12 @@ trubot:
 test:
 	$(CONDA); python -m unittest discover tests.unit
 
+test-database:
+	$(CONDA); pip install psycopg2-binary pymysql cryptography
+	docker compose --file docker/test-database.yaml up --quiet-pull --detach --wait --wait-timeout 30
+	$(CONDA); python -m unittest discover tests.integration.test_database
+	docker compose --file docker/test-database.yaml down
+
 test-tru-chain:
 	$(CONDA); python -m unittest tests.unit.test_tru_chain
 
