splitting large files and organizing into folders (#374)
* splitting large files and organizing into folders

* patching up reorg

* more patching

* more patch

* split large readme into README.md

* nits

* add 2 more files to index

* some bugfixes

* typo

* link feedback README.md

* add custom app to docs index

--- a/trulens_eval/Makefile
+++ b/trulens_eval/Makefile
@@ -14,6 +14,9 @@ test-database:
 	$(CONDA); python -m unittest discover tests.integration.test_database
 	docker compose --file docker/test-database.yaml down
 
+test-feedback:
+	$(CONDA); python -m unittest tests.unit.test_feedback
+
 test-tru-chain:
 	$(CONDA); python -m unittest tests.unit.test_tru_chain
 
