--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,6 +104,7 @@ nav:
               - TruBasicApp: trulens_eval/api/trubasicapp.md
               - TruChain: trulens_eval/api/truchain.md
               - TruLlama: trulens_eval/api/trullama.md
+              - TruCustom: trulens_eval/api/trucustom.md
               - AppDefinition: trulens_eval/api/appdefinition.md
       - Contributing:
           - 🤝 Contrbution Guidelines: trulens_eval/CONTRIBUTING.md
