update llama index, db migration unit tests and found bug fix (#388)
* update llama index and small bugfix

* added legacy migrations tests from prior versions

* Added future db checks in Tru.migrate_database

* add future db example

---------

Co-authored-by: shayaks <47965099+shayaks@users.noreply.github.com>

--- a/trulens_eval/Makefile
+++ b/trulens_eval/Makefile
@@ -8,11 +8,31 @@ trubot:
 test:
 	$(CONDA); python -m unittest discover tests.unit
 
+# Tests for various database types supported by sqlaclhemy.
 test-database:
 	$(CONDA); pip install psycopg2-binary pymysql cryptography
 	docker compose --file docker/test-database.yaml up --quiet-pull --detach --wait --wait-timeout 30
 	$(CONDA); python -m unittest discover tests.integration.test_database
 	docker compose --file docker/test-database.yaml down
+
+# The next 3 database migration/versioning tests:
+test-database-versioning: test-databasev2-migration test-database-legacy-migration test-database-future
+
+# Test migrating a latest legacy sqlite database to sqlalchemy database.
+test-databasev2-migration:
+	$(CONDA); python -m unittest \
+		tests.integration.test_database.TestDbV2Migration.test_migrate_legacy_sqlite_file
+
+# Test migrating non-latest legacy databases to sqlaclhemy database.
+test-database-legacy-migration:
+	$(CONDA); python -m unittest \
+		tests.integration.test_database.TestDbV2Migration.test_migrate_legacy_legacy_sqlite_file
+
+# Test handling of a db that is newer than expected.
+test-database-future:
+	$(CONDA); python -m unittest \
+		tests.integration.test_database.TestDbV2Migration.test_future_db
+
 
 test-feedback:
 	$(CONDA); python -m unittest tests.unit.test_feedback
