Add badges and redirect to github homepage (#414)
* add badges and redirect to github homepage

* Fix table issues in README

* Fix link to community

* fix docs link

---------

Co-authored-by: Shayak Sen <shayak@truera.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,9 @@ markdown_extensions:
   - pymdownx.tilde
   - mdx_math:
       enable_dollar_delimiter: True #for use of inline $..$
+  - markdown_include.include:
+      base_path: docs
+
 
 plugins:
   - mkdocs-jupyter
